syntax = "proto3";

package acme.process_design.v1;
import "validate/validate.proto";

option java_package = "com.acme.domains.process_design";
option java_outer_classname = "QueryServiceProto";

message ListSkillsRequest {
}

message ListSkillsResponse {
  message Skill {
    int64 id = 1 [(validate.rules).int64.gt = 0];
    string name = 2 [(validate.rules).string.min_len = 1, (validate.rules).string.max_len = 60];
    string description = 3 [(validate.rules).string.min_len = 1, (validate.rules).string.max_len = 500];
  }

  repeated Skill skills = 1;
}

service QueryService {
  rpc ListSkills(ListSkillsRequest) returns (ListSkillsResponse);
}
